--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,14 @@
 services:
   - type: web
-    name: goalstats-api
+    name: flask-api
     env: python
+    plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python goalstats-api-fullstack
+    startCommand: gunicorn goalstats.api
+    envVars:
+      - key: FOOTBALL_API_TOKEN
+        value: YOUR_TOKEN
+      - key: ODDS_API_KEY
+        value: YOUR_ODDS_KEY
+      - key: WEATHER_API_KEY
+        value: YOUR_WEATHER_KEY
