--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn goalstats.api-fullstack
+    startCommand: gunicorn goalstats.api-fullstack.py
     envVars:
       - key: FOOTBALL_API_TOKEN
         value: YOUR_TOKEN
