--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ python-dotenv==1.1.0
 requests==2.32.4
 urllib3==2.4.0
 Werkzeug==3.1.3
+flask-restx
+flask-limiter
+joblib
+scikit-learn
+xgboost
+flask-caching
+apscheduler
