--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,59 @@
+aniso8601==10.0.1
+anyio==4.9.0
+APScheduler==3.11.0
+async-timeout==5.0.1
+attrs==25.3.0
 blinker==1.9.0
+cachelib==0.13.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+Deprecated==1.2.18
+exceptiongroup==1.3.0
 Flask==3.1.1
-gunicorn
+Flask-Caching==2.3.1
+flask-cors==6.0.0
+Flask-Limiter==3.12
+flask-restx==1.3.0
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
 idna==3.10
+importlib_resources==6.5.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.5.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+limits==5.2.0
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 numpy==2.2.6
+oauthlib==3.2.2
+ordered-set==4.1.0
+packaging==25.0
+Pygments==2.19.1
 python-dotenv==1.1.0
+python-telegram-bot==20.3
+pytz==2025.2
+redis==6.2.0
+referencing==0.36.2
 requests==2.32.4
+requests-oauthlib==2.0.0
+rich==13.9.4
+rpds-py==0.25.1
+scikit-learn==1.7.0
+scipy==1.15.3
+sniffio==1.3.1
+threadpoolctl==3.6.0
+tweepy==4.15.0
+typing_extensions==4.14.0
+tzdata==2025.2
+tzlocal==5.3.1
 urllib3==2.4.0
 Werkzeug==3.1.3
-flask-restx
-flask-limiter
-joblib
-scikit-learn
-xgboost
-flask-caching
-apscheduler
+wrapt==1.17.2
+xgboost==3.0.2
